<resources>
    <string name="app_name">LivFit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_register">Register</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="action_settings">SETTINGS</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="action_signout">SIGN-OUT</string>
    <string name="action_watherApi">CHECK WEATHER</string>
    <string name="action_reminder">REMIND</string>
    <string name="action_log_food_camera">CAMERA</string>
    <string name="action_log_food_barcode">BARCODE SCANNER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_s_on_your_mind">Whats on Your Mind</string>


    <string name="conversation_username">f690134b-cf8e-4ecb-a023-51efd285c4cf</string>
    <string name="conversation_password">1eLIKH6MleLJ</string>
    <string name="watsonurl">https://gateway.watsonplatform.net/assistant/api/v1/workspaces/df8bf253-2044-4e70-ae4d-c48c0850af4d/message/</string>
    <string name="watsonWorkspaceName">LivefitWatsonWorkspace</string>
    <string name="workspace_id">df8bf253-2044-4e70-ae4d-c48c0850af4d</string>

    <string name="scan">Scan Barcode</string>

    <!-- Strings related to login -->

    <string name="title_dialog_new_list">Create new list</string>
    <string name="title_dialog_new_task">Create new task</string>
    <string name="title_dialog_new_user">Create new user</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="title_dialog_update">Update task</string>
    <string name="allergens">Allergens :</string>
    <string name="date">Date</string>
    <string name="log_this">LOG THIS</string>
    <string name="meal_and_snacks_time">Meal and Snacks Time</string>
    <string name="calories">Calories:</string>
    <string name="serving_size">Serving Size:</string>
    <string name="nutrition_facts">NUTRITION FACTS</string>
    <string name="product_name">Product Name:</string>

    <string-array name="meals_array">
        <item>Morning Snack</item>
        <item>Breakfast</item>
        <item>Afternoon Snack</item>
        <item>Lunch</item>
        <item>Evening Snack</item>
        <item>Dinner</item>
    </string-array>

    <string name="reminder_app_name">Set Reminder At</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_events_listing">All Events</string>
    <string name="Reminder">Reminder</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="user_profile">User profile details</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="alergens">Alergens</string>
    <string name="goal_calories">Goal Calories</string>
    <string name="save_profile">save profile</string>
    <string name="diseases">Diseases</string>
    <string name="cholesterol_mg_dl">Cholesterol (mg/dL)</string>
    <string name="blood_glucose_mg_dl">Blood Glucose (mg/dL)</string>
    <string name="alcohol_consumption">Alcohol Consumption</string>
    <string name="smoking">Smoking</string>
    <string name="weight_in_lbs">Weight in Lbs</string>
    <string name="height">Height</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="email_id">Email Id</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="camera">Camera</string>
    <string name="signout">SignOut</string>
    <string name="dashboard">Dashboard</string>


</resources>
