<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:text="@string/product_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/servingSizeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serving_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/caloriesTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cast_intro_overlay_button_margin_bottom"
            android:layout_toEndOf="@+id/servingSizeTxt"
            android:text="@string/calories"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/allergensTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/allergens"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>
