<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_weight="1"
        android:text="@string/product_name"
        android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        android:textColorLink="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/servingSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serving_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cast_intro_overlay_button_margin_bottom"
            android:layout_toEndOf="@+id/servingSize"
            android:text="@string/calories"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/allergens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/allergens"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loggedDate"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>
