<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:showDividers="beginning"
    android:verticalScrollbarPosition="right">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:layout_weight="1"
        app:srcCompat="@mipmap/apple"
        tools:ignore="ContentDescription" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<<<<<<< log_food.xml

    <View
        android:id="@+id/divider3"
=======
    <!--<TextView-->
        <!--android:id="@+id/product_name"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="14dp"-->
        <!--android:layout_weight="1"-->
        <!--android:text="@string/product_name" />-->

    <TextView
        android:id="@+id/nutrition_facts"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_weight="1"
        android:linksClickable="true"
        android:onClick="onClick"
        android:text="@string/nutrition_facts"
        android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        android:textColorLink="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
>>>>>>> log_food.xml
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="60dp"-->
        <!--android:padding="5dp">-->

        <!--<TextView-->
            <!--android:id="@+id/servingSizeTxt"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/serving_size"-->
            <!--android:textStyle="bold" />-->

        <!--<TextView-->
            <!--android:id="@+id/caloriesTxt"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="@dimen/cast_intro_overlay_button_margin_bottom"-->
            <!--android:layout_toEndOf="@+id/servingSizeTxt"-->
            <!--android:text="@string/calories"-->
            <!--android:textStyle="bold" />-->

        <!--<TextView-->
            <!--android:id="@+id/allergensTxt"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:text="@string/allergens"-->
            <!--android:textStyle="bold" />-->
    <!--</RelativeLayout>-->

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/mealTimeTxt"
        android:layout_width="match_parent"
<<<<<<< log_food.xml
        android:layout_height="21dp"
=======
        android:layout_height="35dp"
>>>>>>> log_food.xml
        android:layout_weight="1"
        android:text="@string/meal_and_snacks_time"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
<<<<<<< log_food.xml
        android:layout_height="25dp"
=======
        android:layout_height="27dp"
>>>>>>> log_food.xml
        android:layout_weight="1" />

<<<<<<< log_food.xml
    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"/>
=======
            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />
>>>>>>> log_food.xml

    <TextView
        android:id="@+id/dayTxt"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:text="@string/date"
        android:textColorLink="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        android:textStyle="bold" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/logBtn"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
                android:text="@string/log_this"
                android:textColor="@android:color/background_light" />


</LinearLayout>
    </ScrollView>

