<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserHomeActivity">

    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="400dp"
        android:layout_height="110dp"
        android:background="@drawable/home_background">

        <ImageView
            android:id="@+id/userProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/userlogo"
            android:contentDescription="@string/user_profile"
            android:src="@drawable/ic_account_circle_black_24dp" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/userProfile"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="54dp"
            android:text="@string/signout" />


    </RelativeLayout>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:padding="14dp"
        app:alignmentMode="alignMargins"
        app:columnCount="2"
        app:columnOrderPreserved="false"
        app:rowCount="3">

        <!-- Row1, Column 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/dashboard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/card_bkd"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/data_analysis_chart" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row1, Column 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/foodLog"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/card_bkd"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food Log"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="TODO"
                    android:src="@mipmap/salad" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row2, Column 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/camera"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/card_bkd"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/camera" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row2, Column 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/barcode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/card_bkd"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Barcode"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/barcode" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row3, Column 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/reminder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/card_bkd"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Reminder"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/appointment_reminder" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.GridLayout>
</LinearLayout>